# crewai

./: .gitignore  requirements.txt
debate_pj/: README.md  pyproject.toml
debate_pj/output/: agree.md  decide.md  disagree.md
debate_pj/src/debate_pj/: crew.py  main.py
debate_pj/src/debate_pj/config/: agents.yaml  tasks.yaml
financial_researcher/: pyproject.toml
financial_researcher/output/: report.md
financial_researcher/src/financial_researcher/: crew.py  main.py
stock_picker/: pyproject.toml
stock_picker/output/: decision.md  research_report.json  trending_companies.json
stock_picker/src/stock_picker/: crew.py  main.py
stock_picker/src/stock_picker/tools/: push_tool.py
