[project]
name = "debate_pj"
version = "0.1.0"
description = "debate-pj using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.12.2"
]

[project.scripts]
debate_pj = "debate_pj.main:run"
run_crew = "debate_pj.main:run"
train = "debate_pj.main:train"
replay = "debate_pj.main:replay"
test = "debate_pj.main:test"
run_with_trigger = "debate_pj.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
